--- a/pythonsrc/Test.ipynb
+++ b/pythonsrc/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# qualche riga solo per trasformare il csv in quasi una tabella latex\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "df = pd.read_csv(\"CSVresult/MAtrixStat.csv\")\n",
+    "a = df.values\n",
+    "a = a[:, 1:]\n",
+    "np.savetxt(\"mydata.csv\", a, delimiter=' & ', fmt='%2.2e', newline=' \\\\\\\\\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": []
